updated layout, added new tiles to portfolio

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="icon" type="image/JPG" href="/assets/images/profile-photo.JPG"/>
-    
+    <link rel="icon" type="image/JPG" href="assets/images/profile-photo.JPG" />
+
     <title>Contact</title>
 
     <!-- Bootstrap core CSS -->
@@ -16,13 +16,15 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <header>
-    <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-secondary border-bottom border-info shadow-sm fixed-top">
+    <div
+        class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-secondary border-bottom border-info shadow-sm fixed-top">
         <h5 class="name my-0 mr-md-auto font-weight-normal text-white bg-info p-4">Vahe Minasyan</h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-white" href="index.html">About</a>
