--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="UT6HE24FWymm29Us68Fn3p_S4bre4GUseuqw2tTWE8k" />
 
-    <link rel="icon" type="image/JPG" href="/assets/images/profile-photo.JPG"/>
+    <link rel="icon" type="image/JPG" href="assets/images/profile-photo.JPG"/>
     
     <title>About Me</title>
 
@@ -17,6 +17,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
+    
    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -45,15 +46,16 @@
         </div>
         <div class="row text-secondary">
             <div class="col">
-                <img src="assets/images/profile-photo.JPG" width="185" height="150" alt="profile-photo"
+                <br>  
+                <img src="assets/images/profile-photo.JPG" width="220" height="179" alt="profile-photo"
                     class="float-left m-2 mr-3">
-                <p>
+               <p style="font-size: 18px">
                     Over 5 years of experience in project, program, and product management and analysis. Life-long
                     learner receiving full stack web development certificate from the University of Washington
                     Bootcamp.
                 </p>
 
-                <p>
+                <p style="font-size: 18px">
                     Possesses additional certifications in business analysis and SQL. Experienced in JavaScript, HTML,
                     CSS, Node.js, Heroku, Azure and SQL working in agile environments. Successfully executed multiple
                     projects
@@ -61,17 +63,17 @@
                     working with cross-functional teams to bridge the gap between business and technology.
                 </p>
 
-                <p>
+                <p style="font-size: 18px">
                     Outside of work likes hosting, facilitating, and organizing local young professionals’ meetups.
                     Soccer, swimming, and outdoors enthusiast. Exploring the United States, from the California coast
                     to the Chicago River.
-                </p>
+                </p><br>
                 <hr>
                 <p>
-                    <a class="text-info" href="https://www.linkedin.com/in/minasyan-vahe/"
+                    <a class="text-info" style="font-size: 18px" href="https://www.linkedin.com/in/minasyan-vahe/"
                         target="_blank">LinkedIn</a>
-                    | <a class="text-info" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
-                </p>
+                    | <a class="text-info" style="font-size: 18px" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
+                </p> 
             </div>
         </div>
     </div>
