--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Portfolio</title>
 
-    <link rel="icon" type="image/JPG" href="/assets/images/profile-photo.JPG"/>
+    <link rel="icon" type="image/JPG" href="assets/images/profile-photo.JPG"/>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -15,15 +15,19 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+ 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <header>
@@ -47,10 +51,10 @@
                 <h1 class="text-info border-bottom">Portfolio</h1>
             </div>
         </div>
-        <div class="row text-secondary">
+        <div class="row text-secondary text-center">
 
-            <div class="col-lg-sm-md mr-5 text-center">
-                <div class="card m-4 lg-sm-md" style="width: 18rem">
+            <div class="col-lg-sm-md text-center">
+                <div class="card m-4 lg-sm-md" style="width: 16rem">
                     <img class="card-img-top" src="assets/images/g1.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample1" role="button"
@@ -60,6 +64,7 @@
                             <p class="text-white">
                                 Sharpen your knowledge of geography. Reveal country's name by guessing letters.
                             </p>
+                            <p>Technology used: JavaScript, jQuery, HTML, CSS, Bootstrap, Google Fonts. </p>
                             <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" target="_blank" role="button"
                                 class="text-white link">Demo</a> |
                             <a href="https://github.com/vaheminasyan2/Word-Guess-Game" target="_blank" role="button"
@@ -68,7 +73,7 @@
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 18rem">
+                <div class="card m-4 lg-sm-md" style="width: 16rem">
                     <img class="card-img-top" src="assets/images/g3.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample2" role="button"
@@ -78,14 +83,17 @@
                             <p class="text-white">
                                 Check your knowledge of geography by answering five simple questions.
                             </p>
-                            <a href="https://vaheminasyan2.github.io/TriviaGame/" target="_blank" role="button" class="text-white link">Demo</a>
+                            <p>Technology used: JavaScript, jQuery, HTML, CSS, Bootstrap, Google Fonts.</p>
+                            <a href="https://vaheminasyan2.github.io/TriviaGame/" target="_blank" role="button"
+                                class="text-white link">Demo</a>
                             |
-                            <a href="https://github.com/vaheminasyan2/TriviaGame" target="_blank" role="button" class="text-white link">Repo</a>
+                            <a href="https://github.com/vaheminasyan2/TriviaGame" target="_blank" role="button"
+                                class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 18rem">
+                <div class="card m-4 lg-sm-md" style="width: 16rem">
                     <img class="card-img-top" src="assets/images/g5.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample3" role="button"
@@ -95,6 +103,7 @@
                             <p class="text-white">
                                 Train Scheduler is a demo app that allows user to add a train to a schedule.
                             </p>
+                            <p>Technology used: JavaScript, jQuery, HTML, CSS, Bootstrap, Firebase, Moment.js.</p>
                             <a href="https://vaheminasyan2.github.io/TrainScheduler/" target="_blank" role="button"
                                 class="text-white link">Demo</a> |
                             <a href="https://github.com/vaheminasyan2/TrainScheduler" target="_blank" role="button"
@@ -105,7 +114,7 @@
             </div>
 
             <div class="col-lg-sm-md text-center">
-                <div class="card m-4 lg-sm-md" style="width: 18rem">
+                <div class="card m-4 lg-sm-md" style="width: 16rem">
                     <img class="card-img-top" src="assets/images/g2.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample4" role="button"
@@ -115,15 +124,16 @@
                             <p class="text-white">
                                 Check your math skills with Crystals Collector game.
                             </p>
-                            <a href="https://vaheminasyan2.github.io/CrystalsCollectorGame/" target="_blank" role="button"
-                                class="text-white link">Demo</a> |
-                            <a href="https://github.com/vaheminasyan2/CrystalsCollectorGame" target="_blank" role="button"
-                                class="text-white link">Repo</a>
+                            <p>Technology used: JavaScript, jQuery, HTML, CSS. </p>
+                            <a href="https://vaheminasyan2.github.io/CrystalsCollectorGame/" target="_blank"
+                                role="button" class="text-white link">Demo</a> |
+                            <a href="https://github.com/vaheminasyan2/CrystalsCollectorGame" target="_blank"
+                                role="button" class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 18rem">
+                <div class="card m-4 lg-sm-md" style="width: 16rem">
                     <img class="card-img-top" src="assets/images/g4.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample5" role="button"
@@ -134,14 +144,17 @@
                                 This app is desinged to show 10 random GIFs on given topic using GIPHY API. Use
                                 this app to find your fav GIF.
                             </p>
-                            <a href="https://vaheminasyan2.github.io/GiphyApp/" target="_blank" role="button" class="text-white link">Demo</a>
+                            <p>Technology used: JavaScript, AJAX, jQuery, Bootstrap, HTML, CSS, GIPHY API, sessionStorage.</p>
+                            <a href="https://vaheminasyan2.github.io/GiphyApp/" target="_blank" role="button"
+                                class="text-white link">Demo</a>
                             |
-                            <a href="https://github.com/vaheminasyan2/GiphyApp" target="_blank" role="button" class="text-white link">Repo</a>
+                            <a href="https://github.com/vaheminasyan2/GiphyApp" target="_blank" role="button"
+                                class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 18rem">
+                <div class="card m-4 lg-sm-md" style="width: 16rem">
                     <img class="card-img-top" src="assets/images/g6.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample6" role="button"
@@ -149,19 +162,21 @@
                         </a>
                         <div class="collapse" id="collapseExample6">
                             <p class="text-white">
-                                This is a demo app that helps two people to find restuarant and event taking account preferences from both users.
+                                This is a demo app that helps two people to find restuarant and event taking account
+                                preferences from both users.
                             </p>
-                            <a href="https://vaheminasyan2.github.io/The-Perfect-Date-App/" target="_blank" role="button"
-                                class="text-white link">Demo</a> |
-                            <a href="https://github.com/vaheminasyan2/The-Perfect-Date-App" target="_blank" role="button"
-                                class="text-white link">Repo</a>
+                            <p>Technology used: JavaScript, jQuery, Bootstrap, HTML, CSS, AJAX, Eventbrite API, Google Places API, Firebase, Email.js.</p>
+                            <a href="https://vaheminasyan2.github.io/The-Perfect-Date-App/" target="_blank"
+                                role="button" class="text-white link">Demo</a> |
+                            <a href="https://github.com/vaheminasyan2/The-Perfect-Date-App" target="_blank"
+                                role="button" class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="col-lg-sm-md mr-5 text-center">
-                <div class="card m-4 lg-sm-md" style="width: 18rem">
+            <div class="col-lg-sm-md text-center">
+                <div class="card m-4 lg-sm-md" style="width: 16rem">
                     <img class="card-img-top" src="assets/images/g7.jpg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample7" role="button"
@@ -171,26 +186,55 @@
                             <p class="text-white">
                                 Answer a 10-question survey to find best matching friend.
                             </p>
-                            <a href="https://nameless-river-63958.herokuapp.com/" target="_blank" role="button" class="text-white link">Demo</a>
+                            <p>Technology used: Node.js, Express, jQuery, Bootstrap, HTML, CSS, Heroku.</p>
+                            <a href="https://nameless-river-63958.herokuapp.com/" target="_blank" role="button"
+                                class="text-white link">Demo</a>
                             |
-                            <a href="https://github.com/vaheminasyan2/FriendFinder" target="_blank" role="button" class="text-white link">Repo</a>
+                            <a href="https://github.com/vaheminasyan2/FriendFinder" target="_blank" role="button"
+                                class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 18rem">
-                    <img class="card-img-top" src="assets/images/g8.jpeg" alt="Card image cap">
+                <div class="card m-4 lg-sm-md" style="width: 16rem">
+                    <img class="card-img-top" src="assets/images/g8.jpg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
-                        <a class="text-white link" data-toggle="collapse" href="#collapseExample7" role="button"
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample8" role="button"
+                            aria-expanded="false" aria-controls="collapseExample">A Burger App
+                        </a>
+                        <div class="collapse" id="collapseExample8">
+                            <p class="text-white">
+                                A Burger App is a restaurant app that lets users input the names of burgers they'd like to eat and track progress. 
+                            </p>
+                            <p>Technology used: Node.js, Express, MySQL, Handlebars, jQuery, ORM, Heroku, JawsDB.</p>
+                            <a href="https://guarded-coast-90449.herokuapp.com/" target="_blank" role="button"
+                                class="text-white link">Demo</a>
+                            |
+                            <a href="https://github.com/vaheminasyan2/Burger" target="_blank" role="button"
+                                class="text-white link">Repo</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card m-4 lg-sm-md" style="width: 16rem">
+                    <img class="card-img-top" src="assets/images/g9.jpeg" alt="Card image cap">
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample9" role="button"
                             aria-expanded="false" aria-controls="collapseExample">Mammoth - A Running App
                         </a>
-                        <div class="collapse" id="collapseExample7">
+                        <div class="collapse" id="collapseExample9">
                             <p class="text-white">
-                                Track your running logs, create routes using Google Maps, compare/share your results with others.
+                                Track your running logs, create routes using Google Maps, compare/share your results
+                                with others.
                             </p>
-                            <a href="https://mammoth-app.herokuapp.com/" target="_blank" role="button" class="text-white link">Demo</a>
+                            <p>Technology used: Node.js, Express, Axios, Handlebars, jQuery, Moment.js, Chart.js,
+                                Sequelize, MySQL, Google Oauth 2.0, Bulma, HTML, CSS, Google Maps API, Heroku, JawsDB.
+                            </p>
+                            <a href="https://mammoth-app.herokuapp.com/" target="_blank" role="button"
+                                class="text-white link">Demo</a>
                             |
-                            <a href="https://github.com/vaheminasyan2/Mammoths" target="_blank" role="button" class="text-white link">Repo</a>
+                            <a href="https://github.com/vaheminasyan2/Mammoths" target="_blank" role="button"
+                                class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
@@ -200,8 +244,8 @@
         </div>
         <hr>
         <p>
-            <a class="text-info" href="https://www.linkedin.com/in/minasyan-vahe/" target="_blank">LinkedIn</a>
-            | <a class="text-info" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
+            <a class="text-info" style="font-size: 18px" href="https://www.linkedin.com/in/minasyan-vahe/" target="_blank">LinkedIn</a>
+            | <a class="text-info" style="font-size: 18px" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
 
         </p>
     </div>
@@ -214,8 +258,8 @@
 
 </body>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/portfolio.js"></script>
 
 </html>
