--- a/portfolio.html
+++ b/portfolio.html
@@ -162,7 +162,7 @@
                         </a>
                         <div class="collapse" id="collapseExample6">
                             <p class="text-white">
-                                This is a demo app that helps two people to find restuarant and event taking account
+                                This is a demo app that helps two people to find restaurant and event taking account
                                 preferences from both users.
                             </p>
                             <p>Technology used: JavaScript, jQuery, Bootstrap, HTML, CSS, AJAX, Eventbrite API, Google Places API, Firebase, Email.js.</p>
