--- a/portfolio.html
+++ b/portfolio.html
@@ -162,8 +162,7 @@
                         </a>
                         <div class="collapse" id="collapseExample6">
                             <p class="text-white">
-                                This is a demo app that helps two people to find restaurant and event taking account
-                                preferences from both users.
+                                This is a demo app that helps two people to find restaurant and event for a date considering preferences of both users.
                             </p>
                             <p>Technology used: JavaScript, jQuery, Bootstrap, HTML, CSS, AJAX, Eventbrite API, Google Places API, Firebase, Email.js.</p>
                             <a href="https://vaheminasyan2.github.io/The-Perfect-Date-App/" target="_blank"
@@ -224,8 +223,7 @@
                         </a>
                         <div class="collapse" id="collapseExample9">
                             <p class="text-white">
-                                Track your running logs, create routes using Google Maps, compare/share your results
-                                with others.
+                                A tracking app to log runs, create routes using Google Maps, compare/share results with other users.
                             </p>
                             <p>Technology used: Node.js, Express, Axios, Handlebars, jQuery, Moment.js, Chart.js,
                                 Sequelize, MySQL, Google Oauth 2.0, Bulma, HTML, CSS, Google Maps API, Heroku, JawsDB.
