--- a/portfolio.html
+++ b/portfolio.html
@@ -45,20 +45,20 @@
 
     <br> <br>
 
-    <div class="main container w-75 mt-5 mb-5 border border-info bg-light">
+    <div class="main container w-80 mt-5 mb-5 border border-info bg-light">
         <div class="row">
             <div class="col">
                 <h1 class="text-info border-bottom">Portfolio</h1>
             </div>
         </div>
-        <div class="row text-secondary text-center">
+        <div class="row text-secondary text-center cardDiv">
 
             <div class="col-lg-sm-md text-center">
-                <div class="card m-4 lg-sm-md" style="width: 15rem">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
                     <img class="card-img-top" src="assets/images/g1.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample1" role="button"
-                            aria-expanded="false" aria-controls="collapseExample1"> Word Guess Game
+                            aria-expanded="false" aria-controls="collapseExample1">Word Guess Game
                         </a>
                         <div class="collapse" id="collapseExample1">
                             <p class="text-white">
@@ -73,7 +73,7 @@
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 15rem">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
                     <img class="card-img-top" src="assets/images/g3.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample2" role="button"
@@ -93,7 +93,7 @@
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 15rem">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
                     <img class="card-img-top" src="assets/images/g5.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample3" role="button"
@@ -114,7 +114,7 @@
             </div>
 
             <div class="col-lg-sm-md text-center">
-                <div class="card m-4 lg-sm-md" style="width: 15rem">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
                     <img class="card-img-top" src="assets/images/g2.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample4" role="button"
@@ -133,7 +133,7 @@
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 15rem">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
                     <img class="card-img-top" src="assets/images/g4.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample5" role="button"
@@ -154,11 +154,11 @@
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 15rem">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
                     <img class="card-img-top" src="assets/images/g6.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample6" role="button"
-                            aria-expanded="false" aria-controls="collapseExample6">The Perfect Date App
+                            aria-expanded="false" aria-controls="collapseExample6">Perfect Date App
                         </a>
                         <div class="collapse" id="collapseExample6">
                             <p class="text-white">
@@ -176,7 +176,7 @@
             </div>
 
             <div class="col-lg-sm-md text-center">
-                <div class="card m-4 lg-sm-md" style="width: 15rem">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
                     <img class="card-img-top" src="assets/images/g7.jpg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample7" role="button"
@@ -196,11 +196,11 @@
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 15rem">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
                     <img class="card-img-top" src="assets/images/g8.jpg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample8" role="button"
-                            aria-expanded="false" aria-controls="collapseExample">A Burger App
+                            aria-expanded="false" aria-controls="collapseExample">Burger App
                         </a>
                         <div class="collapse" id="collapseExample8">
                             <p class="text-white">
@@ -216,11 +216,11 @@
                     </div>
                 </div>
 
-                <div class="card m-4 lg-sm-md" style="width: 15rem">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
                     <img class="card-img-top" src="assets/images/g9.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample9" role="button"
-                            aria-expanded="false" aria-controls="collapseExample">Mammoth - A Running App
+                            aria-expanded="false" aria-controls="collapseExample">Mammoth App
                         </a>
                         <div class="collapse" id="collapseExample9">
                             <p class="text-white">
@@ -238,6 +238,30 @@
                         </div>
                     </div>
                 </div>
+
+            </div>
+
+            <div class="col-lg-sm-md text-center">
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
+                    <img class="card-img-top" src="assets/images/g10.jpeg" alt="Card image cap">
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample10" role="button"
+                            aria-expanded="false" aria-controls="collapseExample">News Scraper App
+                        </a>
+                        <div class="collapse" id="collapseExample10">
+                            <p class="text-white">
+                                The demo app that allows user to scrape news from other site and add/save/remove notes for each article.
+                            </p>
+                            <p>Technology used: Node.js, Express, Cheerio, MongoDB, Mongoose, Axios, Handlebars, jQuery, Bootstrap, Heroku, mLab.</p>
+                            <a href="https://news-scraper-01.herokuapp.com" target="_blank" role="button"
+                                class="text-white link">Demo</a>
+                            |
+                            <a href="https://github.com/vaheminasyan2/news-scraper" target="_blank" role="button"
+                                class="text-white link">Repo</a>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
 
