added new project to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -260,6 +260,27 @@
                     </div>
                 </div>
 
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
+                    <img class="card-img-top" src="assets/images/g11.jpeg" alt="Card image cap">
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample11" role="button"
+                            aria-expanded="false" aria-controls="collapseExample">Clicky Game
+                        </a>
+                        <div class="collapse" id="collapseExample11">
+                            <p class="text-white">
+                                A memory game, that renders 12 different images to the screen. User needs to make sure he doesn't click the same image. 
+                            </p>
+                            <p>Technology used: Node.js, Javascript, React.js, jQuery, Bootstrap, GitHub pages.</p>
+                            <a href="https://vaheminasyan2.github.io/click-game/" target="_blank" role="button"
+                                class="text-white link">Demo</a>
+                            |
+                            <a href="https://github.com/vaheminasyan2/click-game" target="_blank" role="button"
+                                class="text-white link">Repo</a>
+                        </div>
+                    </div>
+                </div>
+
+                
 
             </div>
 
