--- a/portfolio.html
+++ b/portfolio.html
@@ -280,6 +280,26 @@
                     </div>
                 </div>
 
+                <div class="card m-4 lg-sm-md" style="width: 14rem">
+                    <img class="card-img-top" src="assets/images/g12.jpg" alt="Card image cap">
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample12" role="button"
+                            aria-expanded="false" aria-controls="collapseExample">Clicky Game
+                        </a>
+                        <div class="collapse" id="collapseExample12">
+                            <p class="text-white">
+                                A full stack MERN application that renders and saves books from Google Books API. 
+                            </p>
+                            <p>Technology used: Node.js, Express, Javascript, React.js, MongoDB, Mongoose, Axios, Bootstrap, GitHub, AJAX, React Router, </p>
+                            <a href="https://github.com/vaheminasyan2/google-books-search" target="_blank" role="button"
+                                class="text-white link">Demo</a>
+                            |
+                            <a href="https://google-books-search-0317.herokuapp.com/" target="_blank" role="button"
+                                class="text-white link">Repo</a>
+                        </div>
+                    </div>
+                </div>
+
                 
 
             </div>
