--- a/portfolio.html
+++ b/portfolio.html
@@ -264,7 +264,7 @@
                     <img class="card-img-top" src="assets/images/g11.jpeg" alt="Card image cap">
                     <div class="card-body bg-info text-white text-center">
                         <a class="text-white link" data-toggle="collapse" href="#collapseExample11" role="button"
-                            aria-expanded="false" aria-controls="collapseExample">Clicky Game
+                            aria-expanded="false" aria-controls="collapseExample">Google Books Search
                         </a>
                         <div class="collapse" id="collapseExample11">
                             <p class="text-white">
