--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <br><br>
 
           <div class="mx-auto text-center">
-            <a href="https://1drv.ms/b/s!AkMTYKGdBmB8-zgT24i_TQ2f3OxR?e=fwTXp6" target="_blank" class="button btn-primary">View resume</a>
+            <a href="https://1drv.ms/b/s!AkMTYKGdBmB8iMt14xNUQ_CHYi104g?e=Q02MJm" target="_blank" class="button btn-primary">View resume</a>
           </div>
 
           <!-- <form class="form-inline d-flex">
