updated resume link

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <br><br>
 
           <div class="mx-auto text-center">
-            <a href="https://1drv.ms/b/s!AkMTYKGdBmB8iMwP9dlgx4gqdi8prQ?e=1FXMCY" target="_blank" class="button btn-primary">View resume</a>
+            <a href="https://tiny.cc/Vahe-Resume" target="_blank" class="button btn-primary">View resume</a>
           </div>
 
           <!-- <form class="form-inline d-flex">
